2002-07-20 16:47  nikal

	* text/public/: dimestyle.css, index.txt:  removing the
	dimestylesheet and reference

2002-07-20 14:42  nikal

	* text/public/: dimestyle.css, index.txt: Adding a stylesheet and
	it's reference

2002-07-20 13:27  nikal

	* text/public/: battleplan.txt, concept_doc.txt, features.txt,
	index.txt, news.txt, developer_doc/architecture.txt,
	developer_doc/components.txt, developer_doc/data_model.txt,
	developer_doc/data_model_fw.txt, developer_doc/design.txt,
	developer_doc/development_methodology.txt, developer_doc/index.txt,
	developer_doc/scripting.txt, developer_doc/services.txt,
	working_notes/index.txt, working_notes/theme_format.txt,
	working_notes/ui_story_acorn.txt: Adding all the files for the
	first iteration of the cvs website.  I hope this all works. :)

2002-07-19 22:16  nikal

	* text/public/index.txt: Added the first version of Dime's website
	for cvs2web

2002-07-17 10:18  nikal

	* doc/template_header.h: Some changes to the coding doc

2002-07-16 15:01  nikal

	* configure.in, scratchpad/testOGL/do.sh,
	scratchpad/testOGL/test.cpp, src/main/Makefile.am,
	src/services/Makefile.am, src/services/platform/OGLDrawDevice.cpp:
	Modified the Makefile.am's and configure.in to include the new
	LoggingService Organization.  Also made some minor changes to
	testOGL*

2002-07-16 14:59  nikal

	* src/services/logging/Makefile.am: Adding the Makefile.am for
	LoggingService

2002-07-16 14:59  nikal

	* src/services/logging/: LoggingService.cpp, LoggingService.h:
	Reorganized LoggingService so that methods are no longer inline. 
	Better compile times.

2002-07-15 15:51  nikal

	* src/main/Application.cpp: Moved the errant #include to the top of
	the file.

2002-07-15 06:51  nikal

	* src/services/datamodel/: BoolProvider.cpp, FloatProvider.cpp,
	IntProvider.cpp, StringProvider.cpp: Changed return PDataKey(NULL);
	with return PDataKey()

2002-07-14 10:31  tim

	* test/DataModelTest.cpp: [no log message]

2002-07-14 09:49  tim
